--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,11 @@
 language: node_js
 node_js:
 - node
+install:
+  - npm install -g codecov
+script:
+  - npm run test:cover
+  - codecov
 deploy:
   provider: npm
   email: lsmith@zenoscave.com
